<?xml version='1.0' encoding='UTF-8'?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.soffid.tools</groupId>
	<artifactId>mda-maven-plugin</artifactId>
	<packaging>maven-plugin</packaging>
	<name>Maven MDA Plugin</name>
	<version>2.1.3-SNAPSHOT</version>
	<prerequisites>
		<maven>2.0.9</maven>
	</prerequisites>
	<scm>
		<connection>scm:git:ssh://git@github.com:/SoffidIAM/tools.git</connection>
    <tag>HEAD</tag>
  </scm>


	<dependencies>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-plugin-api</artifactId>
			<version>2.0.9</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-project</artifactId>
			<version>2.0.9</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-archiver</artifactId>
			<version>2.3</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.1</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.plexus</groupId>
			<artifactId>plexus-utils</artifactId>
			<version>1.4.9</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-resources-plugin</artifactId>
			<version>2.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.shared</groupId>
			<artifactId>maven-plugin-testing-harness</artifactId>
			<version>1.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-plugin-plugin</artifactId>
			<version>2.2</version>
			<type>maven-plugin</type>
		</dependency>
		<dependency>
			<groupId>com.soffid.tools</groupId>
			<artifactId>mdagenerator</artifactId>
			<version>2.1.1</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.plexus</groupId>
			<artifactId>plexus-archiver</artifactId>
			<version>1.0</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>11</source>
					<target>11</target>
					<compilerArgs>
					    <arg>--add-modules=java.sql</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<!-- Testing the result of the it pom.xml -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<excludes>
						<exclude>**/*IntegrationTest.java</exclude>
					</excludes>
				</configuration>
			</plugin>

			 <plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-plugin-plugin</artifactId>
			    <version>2.9</version>
			    <executions>
                   <execution>
                       <id>mojo-descriptor</id>
                       <goals>
                           <goal>descriptor</goal>
                       </goals>
                   </execution>
			      <execution>
			        <id>default-descriptor</id>
			        <phase>process-classes</phase>
			      </execution>
			      <!-- if you want to generate help goal -->
			      <execution>
			        <id>help-goal</id>
			        <goals>
			          <goal>helpmojo</goal>
			        </goals>
			      </execution>
			    </executions>
			  </plugin>
  
		</plugins>
	</build>

	<properties>
		<gforge.project>bpm</gforge.project>
	</properties>

	<pluginRepositories>
		<pluginRepository>
			<id>soffid-open</id>
			<url>https://download.soffid.com/maven</url>
		</pluginRepository>
		<pluginRepository>
			<id>central</id>
			<url>https://repo1.maven.org/maven2</url>
		</pluginRepository>
	</pluginRepositories>
	<repositories>
		<repository>
			<id>central</id>
			<url>https://repo1.maven.org/maven2</url>
		</repository>
		<repository>
			<id>soffid-open</id>
			<url>https://download.soffid.com/maven</url>
		</repository>
	</repositories>
  <distributionManagement>
    <repository>
      <uniqueVersion>true</uniqueVersion>
      <id>soffid-open</id>
      <name>Soffid Maven repository</name>
      <url>${soffid.deploy.url}</url>
    </repository>
    <site>
      <id>soffid-open-site</id>
      <name>Soffid Maven site repository</name>
      <url>${soffid.deploy.site.url}</url>
    </site>
  </distributionManagement>
</project>
